--- a/Asteroids.desktop
+++ b/Asteroids.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Type=Application
 Name=Asteroids
 Exec=/opt/asteroids/Asteroids
-Comment=Asteroids Allegro game
+Categories=Game;
+Type=Application
