--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-bin
+release
+*.AppDir
+*.AppImage
 
 # Object files
 *.o
@@ -10,18 +12,6 @@ bin
 *.ilk
 *.map
 *.exp
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
 
 # Executables
 *.exe
